# agent_marketplace_demo

./: .env.example  .gitignore  CHANGELOG.md  DEMO.md  INTEGRATING_WITH_RACE_CONDITION.md  PLAN.md  PRESENTATION.md  README.md  pyproject.toml
common/: a2a_client.py  auth.py  registry_client.py
deploy/: agent_engine.md  start_local.sh  stop_local.sh
discovery_agent/: agent.py
dog_walker_agent/: agent.py  agent_card.py  buddy.json  register.py  server.py  tools.py
orchestrator_agent/: agent.py  agent_without_registry.py
trip_planner_agent/: agent.py  agent_card.py  agent_no_registry.py  register.py  server.py  tools.py
