[project]
name = "agent-marketplace-demo"
version = "0.1.0"
description = "A2A + Agent Registry + MCP demo: dog walker, trip planner, and orchestrator agents discoverable via Google Cloud Agent Registry."
requires-python = ">=3.11"
dependencies = [
    "google-adk[a2a,agent-identity]>=1.0.0",
    "google-auth>=2.0.0",
    "google-cloud-aiplatform>=1.60.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "a2a-sdk>=0.3.26",
]
